# bonelab_mod_manager

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  mac_release.sh
.github/: dependabot.yml
.github/workflows/: rust-build.yml  rust-ci.yml  rust.yml
Bonelab Mod Manager Installer/Bonelab Mod Manager.app/Contents/: Info.plist
Bonelab Mod Manager Installer/Bonelab Mod Manager.app/Contents/MacOS/: Bonelab Mod Manager
src/: adb.rs  app_data.rs  authentication.rs  error.rs  installation.rs  main.rs  modio.rs
src/app_data/: error.rs  mod.rs
src/installation/: error.rs  mod.rs
