[package]
name = "bonelab_mod_manager"
# Remember to update the version in `Info.plist`!
version = "0.6.3"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "Keeps your installed Bonelab mods synced with your subscribed mod.io mods."
repository = "https://github.com/valentinegb/bonelab_mod_manager"
license = "MIT"
keywords = ["bonelab", "mods", "mods-downloader"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = ["backtrace"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
env_logger = "0.11.1"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
indicatif = { version = "0.17.6", features = ["tokio"] }
log = "0.4.20"
modio = "0.9.1"
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"

[target.'cfg(unix)'.dependencies]
keyring = "2.3.2"
